[package]
name = "fpc-server-rs-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
tokio-stream = "0.1.9"
futures = "0.3.21"
tokio-tungstenite = "0.17.2"
env_logger = "0.8.4"
log = "0.4.0"
thiserror = "1.0.31"
matchmaker = { git="https://github.com/Four-player-chess-inc/matchmaker-rs", rev="b78a9fc" }
four-player-chess-async = { git="https://github.com/Four-player-chess-inc/four-player-chess-async-rs", rev="54b1d9f" }
enum-iterator = "1"
#fpc-proto = { path = "../fpc-proto-rs" }
